# ota-demo

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.old
components/: component.mk
main/: CMakeLists.txt  Kconfig.projbuild  console.c  console.h  idf_component.yml  main.c  main.h  settings.c  settings.h  web_server.c  wifi_ap.c
